# 2DScroller

./: CMakeLists.txt
src/: timer.cpp  timer.h  utils  utils.cpp  utils.h
src/background/: background  background.cpp  background.h
src/enemies/: Fly.cpp  Fly.h  Plant.cpp  Plant.h  Slime.cpp  Slime.h
src/entity/: entity.cpp  entity.h  player  player.cpp  player.h
src/main/: GameClass.cpp  GameClass.h  GameScreen  GameScreen.cpp  GameScreen.h  KeyHandler  KeyHandler.cpp  KeyHandler.h  MenuHandler.cpp  MenuHandler.h  main  main.cpp
src/states/: StateAttack1.cpp  StateAttack1.h  StateAttack2.cpp  StateAttack2.h  StateAttack3.cpp  StateAttack3.h  StateDead.cpp  StateDead.h  StateFly.cpp  StateFly.h  StateHurt.cpp  StateHurt.h  StateIdle1  StateIdle1.cpp  StateIdle1.h  StateIdle2  StateIdle2.cpp  StateIdle2.h  StateJump.cpp  StateJump.h  StateRun  StateRun.cpp  StateRun.h  StateWalk  StateWalk.cpp  StateWalk.h  States.cpp  States.h
